Incorporate changes from version 1.1.1
